Creative Commons, Description are added in lubyPictool / the bug is fixed to hashTag / the replace function is upadated to cropper /

--- a/plugin/lubycon_plugins/lubyPictool/chosen.css
+++ b/plugin/lubycon_plugins/lubyPictool/chosen.css
@@ -22,7 +22,7 @@ This file is generated by `grunt build`, do not edit it by hand.
   -moz-user-select: none;
   user-select: none;
 
-  width: 300px !important;
+  width: 320px !important;
 }
 .chosen-container * {
   -webkit-box-sizing: border-box;
